Failed attempt to automate

--- a/example/Makefile
+++ b/example/Makefile
@@ -2,10 +2,10 @@ all:
 	echo 'No default'
 
 publish:
+	(cd ..; perl Makefile.PL; make purge)
 	vroom -html
+	rm -fr ../../html
 	mv html ../../
 	git stash
-	git co gh-pages
-	make publish
-	git co master
+	(cd ..; git co gh-pages; make publish; git co master)
 	git stash apply
