--- a/.travis.yml
+++ b/.travis.yml
@@ -26,9 +26,11 @@ install:
   YAML::XS
 
 script:
-- PERL5OPT=-MDevel::Cover=-coverage,statement,branch,condition,path,subroutine
+- test -e test &&
+  PERL5OPT=-MDevel::Cover=-coverage,statement,branch,condition,path,subroutine
   prove -lv test/
-- cover
+  || true
+- test -e test && cover || true
 
 after_success:
 - cover -report coveralls
